--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
 }
 
+/* banner section*/
 .banner-style {
     width: 100%;
     height: 810px;
@@ -25,6 +26,29 @@
 .description {
     font-size: 20px;
     font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.btn-style {
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+
+/*section year*/
+
+.img-style {
+    height: 70%;
+}
+
+.section-year {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    padding: 100px 100px;
+    background-color: rgb(116, 109, 109);
+    margin: 80px;
 }
 
 .title-1 {
@@ -45,38 +69,11 @@
     margin-bottom: 5px;
 }
 
-.btn-style {
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-
-.section-year {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 100px;
-    padding: 100px 100px;
-    background-color: rgb(116, 109, 109);
-    margin: 80px;
-}
-
-.img-setup {
-    background-image: url(images/watch.png), linear-gradient(rgba(31, 41, 54, 0.689), rgba(118, 65, 96, 0.372));
-    padding: 100px;
-    width: 900px;
-    background-blend-mode: overlay;
-    background-repeat: no-repeat;
-    margin: 60px;
-}
-
-.img-style {
-    height: 70%;
-
-}
-
 .img-checker {
     width: 12px;
 }
+
+/*section plans*/
 
 .section-plans {
     text-align: center;
@@ -92,7 +89,17 @@
     margin-bottom: 50px;
 }
 
+/*img-setup*/
+.img-setup {
+    background-image: url(images/watch.png), linear-gradient(rgba(31, 41, 54, 0.689), rgba(118, 65, 96, 0.372));
+    padding: 100px;
+    width: 900px;
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    margin: 60px;
+}
 
+/*section style*/
 .section-style {
     display: flex;
     width: 70%;
